--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             <h1 class="logo">Fiverr.com</h1>
             <ul>
                 <li>
-                    <a href="https://www.fiverr.com/umarsasoli?up_rollout=true"><img src="2st.jpg"></a>
+                    <a href="https://www.fiverr.com/umarsasoli"><img src="2st.jpg"></a>
                 </li>
             </ul>
         </header>
@@ -141,7 +141,7 @@
                 </p>
             </div>
             <button>
-                <a href="https://www.fiverr.com/umarsasoli?up_rollout=true">Click Here</a>
+                <a href="https://www.fiverr.com/umarsasoli">Click Here</a>
             </button>
         </div>
         <div class="imag"></div>
